--- a/archiver/Properties/Settings.settings
+++ b/archiver/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="lastguanliPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MF_path" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
